// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component does not render an error or a success message if message props is empty 1`] = `<DocumentFragment />`;

exports[`Alert component renders a error message if message and isSuccess are falsy 1`] = `
<DocumentFragment>
  <div
    class="alert alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert component renders a success message if message and isSuccess are truthy 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success"
  >
    Success!
  </div>
</DocumentFragment>
`;
